add notebin logo and add dashboard note

--- a/NoteBin3/src/NoteBin3/wwwroot/static/css/styles.css
+++ b/NoteBin3/src/NoteBin3/wwwroot/static/css/styles.css
@@ -11,3 +11,16 @@ a.padded-brand-logo.left.brand-logo {
     padding-left: 30px;
     padding-right: 30px;
 }
+
+.nb-med-square {
+    width: 240px;
+    height: 240px;
+}
+
+.margin-above {
+    margin-top: 30px;
+}
+
+.mg-divider {
+    height: 20px;
+}
