add footers and dashboard

--- a/NoteBin3/src/NoteBin3/wwwroot/static/css/styles.css
+++ b/NoteBin3/src/NoteBin3/wwwroot/static/css/styles.css
@@ -12,6 +12,13 @@
 
 body {
     background-color: #f4f4f4;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.main-content {
+    flex: 1 0 auto;
 }
 
 a.padded-brand-logo.left.brand-logo {
