--- a/NoteBin3/src/NoteBin3/wwwroot/static/css/styles.css
+++ b/NoteBin3/src/NoteBin3/wwwroot/static/css/styles.css
@@ -62,3 +62,8 @@ a.padded-brand-logo.left.brand-logo {
 #btn-login {
     margin-right: 15px;
 }
+
+.CodeMirror {
+    border: 1px solid #eee;
+    height: auto;
+}
